# osm_city_graph

./: README.md  install_check.py  pyproject.toml  requirements.txt
citynet/: __init__.py  cli.py  core.py  io.py  osm_backend.py
examples/: cities_coordinates.csv  cities_names.csv
tests/: test_core.py
