[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osm-city-graph"
version = "0.1.0"
description = "Construct weighted city macro-graphs from OpenStreetMap road networks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "osmnx>=2.0.7,<2.1; python_version < '3.11'",
  "osmnx>=2.1,<3; python_version >= '3.11'",
  "networkx>=3.4,<4",
  "pandas>=2.2,<4",
  "numpy>=1.26,<3",
  "matplotlib>=3.8,<4",
  "geopandas>=1.0,<2",
  "scipy>=1.12,<2",
]

[project.scripts]
citynet = "citynet.cli:main"

[tool.setuptools.packages.find]
include = ["citynet*"]
